--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ sqlparse==0.4.4
 typing-extensions==4.5.0
 whitenoise==6.4.0
 python-dotenv==1.0.0
+cloudinary==1.33.0 
+django-cloudinary-storage==0.3.0
